[gd_scene load_steps=2 format=3 uid="uid://duwv8s7xto038"]

[ext_resource type="Script" uid="uid://bwp22x1l86byq" path="res://scripts/UI/WinMenu.gd" id="1_ag0l5"]

[node name="WinMenu" type="Control"]
process_mode = 2
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ag0l5")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Center"]
custom_minimum_size = Vector2(420, 220)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Center/Panel/Margin"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
text = "Level Complete!"
horizontal_alignment = 1

[node name="BtnNext" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2

[node name="BtnRestart" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2

[node name="BtnMenu" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
